--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-scroll": "^1.8.9",
     "react-youtube": "^10.1.0",
     "recoil": "^0.7.7",
     "sass": "^1.62.0",
@@ -38,12 +39,11 @@
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.8",
-    "@types/react-scroll": "^1.8.6",
+    "@types/react-scroll": "^1.8.7",
     "@types/youtube-player": "^5.5.7",
     "@types/yt-player": "^3.5.1",
     "i": "^0.3.7",
     "netlify-cli": "^14.2.1",
-    "npm": "^9.6.7",
-    "react-scroll": "^1.8.9"
+    "npm": "^9.6.7"
   }
 }
