--- a/package.json
+++ b/package.json
@@ -22,26 +22,21 @@
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
     "gsap": "^3.11.5",
-    "instagram-private-api": "^1.45.3",
     "next": "13.3.0",
     "nodemailer": "^6.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-scroll": "^1.8.9",
-    "react-youtube": "^10.1.0",
     "recoil": "^0.7.7",
     "sass": "^1.62.0",
     "swiper": "^9.2.3",
     "swr": "^2.1.5",
-    "typescript": "5.0.4",
-    "yt-player": "^3.6.1"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.8",
     "@types/react-scroll": "^1.8.7",
-    "@types/youtube-player": "^5.5.7",
-    "@types/yt-player": "^3.5.1",
     "i": "^0.3.7",
     "netlify-cli": "^14.2.1",
     "npm": "^9.6.7"
